--- a/DotFramework/Net/DotEngine.Net/DotEngine.Net.csproj
+++ b/DotFramework/Net/DotEngine.Net/DotEngine.Net.csproj
@@ -66,19 +66,19 @@
     <Compile Include="Stream\MemoryStreamEx.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotEngine.Crypto\DotEngine.Crypto.csproj">
+    <ProjectReference Include="..\..\Crypto\DotEngine.Crypto\DotEngine.Crypto.csproj">
       <Project>{6920f3ed-3ab9-41f4-b0f5-cb21b27bc53c}</Project>
       <Name>DotEngine.Crypto</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DotEngine.Framework\DotEngine.Framework.csproj">
+    <ProjectReference Include="..\..\Framework\DotEngine.Framework\DotEngine.Framework.csproj">
       <Project>{a5d87cc3-4ac3-4d9f-ae97-92f81de8afe8}</Project>
       <Name>DotEngine.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DotEngine\DotEngine.csproj">
+    <ProjectReference Include="..\..\Core\DotEngine\DotEngine.csproj">
       <Project>{fb66a876-d598-498c-8dbd-bec7cc13c40d}</Project>
       <Name>DotEngine</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DotSnappy\DotSnappy\Snappy.Net.csproj">
+    <ProjectReference Include="..\..\Others\Snappy.Net\Snappy.Net.csproj">
       <Project>{dd329d5d-d18d-4390-99e4-17439e8ad4d7}</Project>
       <Name>Snappy.Net</Name>
     </ProjectReference>
