--- a/DotFramework/Tools/ScriptGenerateDemo/ScriptGenerateDemo.csproj
+++ b/DotFramework/Tools/ScriptGenerateDemo/ScriptGenerateDemo.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F710F578-3D80-475E-BB1B-1CBB966C7C13}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DotTool.ScriptGenerate</RootNamespace>
-    <AssemblyName>DotTool.ScriptGenerate</AssemblyName>
+    <ProjectGuid>{081E7A5B-5EBB-43D7-B332-BE1F8A3CF93C}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>ScriptGenerateDemo</RootNamespace>
+    <AssemblyName>ScriptGenerateDemo</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,15 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chunk.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TemplateEngine.cs" />
-    <Compile Include="TemplateFormatException.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Context\DotEngine.Context\DotEngine.Context.csproj">
       <Project>{973ba58f-3fd4-4a7d-aeee-c9e0f135b12a}</Project>
       <Name>DotEngine.Context</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DotTool.ScriptGenerate\DotTool.ScriptGenerate.csproj">
+      <Project>{f710f578-3d80-475e-bb1b-1cbb966c7c13}</Project>
+      <Name>DotTool.ScriptGenerate</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
