--- a/DotFramework/Net/DotTool.PBConfig/DotTool.PBConfig.csproj
+++ b/DotFramework/Net/DotTool.PBConfig/DotTool.PBConfig.csproj
@@ -41,9 +41,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSharpProtoIDWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtoConfig.cs" />
     <Compile Include="ProtoConfigUtil.cs" />
+    <Compile Include="Writer\IProtoIDWriter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Context\DotEngine.Context\DotEngine.Context.csproj">
+      <Project>{973ba58f-3fd4-4a7d-aeee-c9e0f135b12a}</Project>
+      <Name>DotEngine.Context</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Tools\DotTool.ScriptGenerate\DotTool.ScriptGenerate.csproj">
+      <Project>{f710f578-3d80-475e-bb1b-1cbb966c7c13}</Project>
+      <Name>DotTool.ScriptGenerate</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
