--- a/DotFramework/Net/DotTool.PBConfig/DotTool.PBConfig.csproj
+++ b/DotFramework/Net/DotTool.PBConfig/DotTool.PBConfig.csproj
@@ -41,11 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CSharpProtoIDWriter.cs" />
+    <Compile Include="ProtoIDWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtoConfig.cs" />
     <Compile Include="ProtoConfigUtil.cs" />
-    <Compile Include="Writer\IProtoIDWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Context\DotEngine.Context\DotEngine.Context.csproj">
