--- a/DotFramework/Net/DotEngine.Net/DotEngine.Net.csproj
+++ b/DotFramework/Net/DotEngine.Net/DotEngine.Net.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Server\ServerNetListener_Json.cs" />
     <Compile Include="Server\ServerNetListener_PB.cs" />
     <Compile Include="Server\ServerNetSession.cs" />
+    <Compile Include="Services\ClientNetService.cs" />
+    <Compile Include="Services\NetNotification.cs" />
+    <Compile Include="Services\ServerNetService.cs" />
     <Compile Include="Stream\BufferStream.cs" />
     <Compile Include="Stream\MemoryStreamEx.cs" />
   </ItemGroup>
