--- a/DotFramework/GOPool/DotEngine.GOPool/DotEngine.GOPool.csproj
+++ b/DotFramework/GOPool/DotEngine.GOPool/DotEngine.GOPool.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\libs\UnityEngine.dll</HintPath>
+      <HintPath>..\..\libs\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
