--- a/DotFramework/Context/DotEngine.Context/DotEngine.Context.csproj
+++ b/DotFramework/Context/DotEngine.Context/DotEngine.Context.csproj
@@ -43,8 +43,8 @@
   <ItemGroup>
     <Compile Include="EnvContext.cs" />
     <Compile Include="IEnvContext.cs" />
-    <Compile Include="Inject\InjectAttribute.cs" />
-    <Compile Include="Inject\InjectUtil.cs" />
+    <Compile Include="ContextFieldAttribute.cs" />
+    <Compile Include="ContextUtil.cs" />
     <Compile Include="IntContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringContext.cs" />
