--- a/DotFramework/Config/DotTool.ExcelToData/DotTool.ExcelToData.csproj
+++ b/DotFramework/Config/DotTool.ExcelToData/DotTool.ExcelToData.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Fields\LuaField.cs" />
     <Compile Include="Fields\RefField.cs" />
     <Compile Include="Fields\StringField.cs" />
+    <Compile Include="Log\LogHandler.cs" />
+    <Compile Include="Log\LogMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\AssemblyUtil.cs" />
     <Compile Include="Validation\BoolValidation.cs" />
@@ -71,9 +73,14 @@
     <Compile Include="Validation\StringValidation.cs" />
     <Compile Include="Validation\UniqueValidation.cs" />
     <Compile Include="Validation\ValidationFactory.cs" />
+    <Compile Include="Verify\IVerify.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Verify\" />
+    <ProjectReference Include="..\..\Context\DotEngine.Context\DotEngine.Context.csproj">
+      <Project>{973ba58f-3fd4-4a7d-aeee-c9e0f135b12a}</Project>
+      <Name>DotEngine.Context</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
