添加Excel转成Json处理

--- a/DotFramework/Config/DotTool.ExcelToData/DotTool.ExcelToData.csproj
+++ b/DotFramework/Config/DotTool.ExcelToData/DotTool.ExcelToData.csproj
@@ -36,6 +36,10 @@
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\libs\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NPOI">
       <HintPath>..\libs\NPOI.dll</HintPath>
     </Reference>
@@ -91,6 +95,7 @@
     <Compile Include="Fields\LuaField.cs" />
     <Compile Include="Fields\RefField.cs" />
     <Compile Include="Fields\StringField.cs" />
+    <Compile Include="IO\Json\JsonWriter.cs" />
     <Compile Include="IO\Lua\LuaWriter.cs" />
     <Compile Include="IO\Ndb\NdbWriter.cs" />
     <Compile Include="IO\WorkbookConst.cs" />
