--- a/DotFramework/Core/DotEditor/DotEditor.csproj
+++ b/DotFramework/Core/DotEditor/DotEditor.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ReflectionMagic">
-      <HintPath>..\libs\Editor\ReflectionMagic.dll</HintPath>
+      <HintPath>..\..\libs\Editor\ReflectionMagic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,10 +43,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEditor">
-      <HintPath>..\libs\Editor\UnityEditor.dll</HintPath>
+      <HintPath>..\..\libs\Editor\UnityEditor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\libs\UnityEngine.dll</HintPath>
+      <HintPath>..\..\libs\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
