--- a/DotFramework/Config/DotEditor.Config/DotEditor.Config.csproj
+++ b/DotFramework/Config/DotEditor.Config/DotEditor.Config.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ReflectionMagic">
-      <HintPath>..\libs\Editor\ReflectionMagic.dll</HintPath>
+      <HintPath>..\..\libs\Editor\ReflectionMagic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,10 +43,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEditor">
-      <HintPath>..\libs\Editor\UnityEditor.dll</HintPath>
+      <HintPath>..\..\libs\Editor\UnityEditor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\libs\UnityEngine.dll</HintPath>
+      <HintPath>..\..\libs\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -54,6 +54,7 @@
     <Compile Include="Ini\CreateIniGroupContent.cs" />
     <Compile Include="Ini\IniConfigUtil.cs" />
     <Compile Include="Ini\IniConfigWindow.cs" />
+    <Compile Include="Ndb\NDBViewer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,5 +71,6 @@
       <Name>DotEngine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
