--- a/DotFramework/NativeDrawer/DotEditor.NativeDrawer/DotEditor.NativeDrawer.csproj
+++ b/DotFramework/NativeDrawer/DotEditor.NativeDrawer/DotEditor.NativeDrawer.csproj
@@ -40,10 +40,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEditor">
-      <HintPath>..\libs\Editor\UnityEditor.dll</HintPath>
+      <HintPath>..\..\libs\Editor\UnityEditor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\libs\UnityEngine.dll</HintPath>
+      <HintPath>..\..\libs\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
