解决GameObject的优化时，添加日志，同时添加对模型的判断

--- a/DotFramework/AnimationSystem/DotEditor.AnimationSystem/DotEditor.AnimationSystem.csproj
+++ b/DotFramework/AnimationSystem/DotEditor.AnimationSystem/DotEditor.AnimationSystem.csproj
@@ -62,5 +62,8 @@
       <Name>DotEngine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MeshAnimator\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
