--- a/DotFramework/Timeline/DotEditor.Timeline/DotEditor.Timeline.csproj
+++ b/DotFramework/Timeline/DotEditor.Timeline/DotEditor.Timeline.csproj
@@ -43,5 +43,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotEngine.Timeline\DotEngine.Timeline.csproj">
+      <Project>{9dba9002-9e48-4501-aeef-d50981a46ac7}</Project>
+      <Name>DotEngine.Timeline</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
