--- a/Dot/Others/ObjectDumper/ObjectDumper.csproj
+++ b/Dot/Others/ObjectDumper/ObjectDumper.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{309C6243-2A4D-476F-8EC7-03ABA3410717}</ProjectGuid>
+    <ProjectGuid>{EFE3AD4B-A5B5-42D0-8DE6-C4E083F47BBF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dot.Dispatch</RootNamespace>
-    <AssemblyName>DotDispatch</AssemblyName>
+    <RootNamespace>ObjectDumper</RootNamespace>
+    <AssemblyName>ObjectDumper</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\DotLibs\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,25 +25,12 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\DotLibs\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DotLibs\DotCore.dll</HintPath>
-    </Reference>
-    <Reference Include="DotLog, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DotLibs\DotLog.dll</HintPath>
-    </Reference>
-    <Reference Include="DotTimer, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DotLibs\DotTimer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,14 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventData.cs" />
-    <Compile Include="EventDispatcher.cs" />
-    <Compile Include="EventManager.cs" />
+    <Compile Include="DumpOptions.cs" />
+    <Compile Include="DumpStyle.cs" />
+    <Compile Include="Internal\DumperBase.cs" />
+    <Compile Include="Internal\FieldInfoExtensions.cs" />
+    <Compile Include="Internal\ObjectDumperConsole.cs" />
+    <Compile Include="Internal\ObjectDumperCSharp.cs" />
+    <Compile Include="Internal\PropertyInfoExtensions.cs" />
+    <Compile Include="Internal\StringExtensions.cs" />
+    <Compile Include="Internal\TypeExtensions.cs" />
+    <Compile Include="ObjectDumper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-  </PropertyGroup>
 </Project>
